Fixes form position, improve readability of generated renderer

--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -5,3 +5,25 @@ input.ng-invalid.ng-touched, textarea.ng-invalid.ng-touched, .field_with_errors 
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
   transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
+
+.fixed {
+  position: fixed;
+}
+
+@media (min-width: $screen-xs-min) and (max-width: $screen-xs-max) {
+  .fixed {
+    position: relative;
+  }
+}
+
+@media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+  .fixed {
+    position: relative;
+  }
+}
+
+@media (min-width: $screen-md-min)  {
+  .fixed {
+    width: 32%;
+  }
+}
